--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="row justify-content-center align-items-center" style="min-height: 80vh;">
-    <div class="col-md-6 col-lg-5">
+    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card login-card">
             <div class="card-header login-header text-center">
                 <i class="fa fa-user-circle mb-2"></i>
