--- a/templates/registration/registro.html
+++ b/templates/registration/registro.html
@@ -7,7 +7,7 @@
 {% block extra_body_class %}{% endblock %}
 <div class="bg-overlay">
 <div class="row justify-content-center align-items-center" style="min-height: 60vh;">
-    <div class="col-md-5 col-lg-5">
+    <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card registro-card">
             <div class="card-header registro-header text-center">
                 <i class="fa fa-user-plus mb-2"></i>
