--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
                 <div class="text-muted">
                     Copyright &copy; Agenda Personal {% now "Y" %}
                 </div>
-                <div class="text-muted mt-1">Desarrollado por Deyby Camacho</div>
+                <div class="text-muted mt-1">Desarrollado por <a href="{% url 'about_me' %}">Deyby Camacho</a></div>
                 {# <--- LÍNEA AÑADIDA #}
             </div>
         </div>
